drag drop initial work

--- a/src/app/individual-card/individual-card.component.html
+++ b/src/app/individual-card/individual-card.component.html
@@ -1,4 +1,4 @@
-<p-card [style]="{'margin': '4px'}">
+<p-card [style]="{'margin': '4px'}" pDraggable pDroppable dragEffect="all">
   <div class="m-0">
     <textarea pInputTextarea placeholder="Enter description for card" class="card-title" [autoResize]="true" [value]="placeholder ? '' : description"></textarea>
   </div>
