--- a/src/app/list-card/list-card.component.html
+++ b/src/app/list-card/list-card.component.html
@@ -1,9 +1,9 @@
-<p-card [style]="{'width': '400px', 'margin': '4px'}">
+<p-card [style]="{'width': '400px', 'margin': '4px'}" pDroppable>
   <div class="p-card-header">
     <input type="text" pInputText placeholder="Enter title to create list" class="card-title" [value]="placeholder ? '' : title">
   </div>
   <div class="m-0">
-    <app-individual-card>lol</app-individual-card>
+    <app-individual-card cdkDropList="">lol</app-individual-card>
     <app-individual-card>lol</app-individual-card>
     <app-individual-card>lol</app-individual-card>
   </div>
