--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<p-button label="button"></p-button>
 <div style="display: flex;">
   <app-list-card title="test" [placeholder]="false" *ngFor="let item of [1,2,3,4,5,6,7,8,9,10];"></app-list-card>
+  <button pButton pRipple class="p-button-success" icon="pi pi-plus" style="flex-shrink: 0"></button>
+  <div style="width: 100px; flex-shrink: 0;"></div>
 </div>
