--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
   display: block;
   height: 95vh;
-  background-image: url("https://cdn.pixabay.com/photo/2022/06/07/18/28/sikkim-7249064_960_720.jpg");
+  background-image: url("assets/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
