--- a/src/app/individual-card/individual-card.component.html
+++ b/src/app/individual-card/individual-card.component.html
@@ -1,5 +1,5 @@
 <p-card [style]="{'margin': '4px'}" pDraggable pDroppable (onDrag)="onDrag()" (onDrop)="onDrop()">
   <div class="m-0">
-    <textarea pInputTextarea placeholder="Enter description for card" class="card-title" [autoResize]="true" [value]="placeholder ? '' : description"></textarea>
+    <textarea pInputTextarea placeholder="Enter description for card" class="card-title" [autoResize]="true" [value]="card.description"></textarea>
   </div>
 </p-card>
