--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div style="display: flex;">
-  <app-list-card title="test" *ngFor="let item of [1,2,3,4,5,6,7,8,9,10];" [model]="{'title': 'test', 'cards': []}"></app-list-card>
-  <button pButton pRipple class="p-button-success" icon="pi pi-plus" style="flex-shrink: 0"></button>
+  <app-list-card title="test" *ngFor="let item of cardList;" [model]="{'title': item.title, 'cards': item.cards}"></app-list-card>
+  <button pButton pRipple class="p-button-success" icon="pi pi-plus" style="flex-shrink: 0" (mouseup)="newList()"></button>
   <div style="width: 100px; flex-shrink: 0;"></div>
 </div>
