drag and drop implemented for card elements

--- a/src/app/individual-card/individual-card.component.html
+++ b/src/app/individual-card/individual-card.component.html
@@ -1,4 +1,4 @@
-<p-card [style]="{'margin': '4px'}" pDraggable pDroppable (onDrag)="onDrag()" (onDrop)="onDrop()">
+<p-card [style]="{'margin': '4px'}" pDraggable pDroppable (onDrag)="onDrag()" (onDrop)="onDrop($event)">
   <div class="m-0">
     <textarea pInputTextarea placeholder="Enter description for card" class="card-title" [autoResize]="true" [(ngModel)]="model.description"></textarea>
   </div>
