--- a/src/app/list-card/list-card.component.html
+++ b/src/app/list-card/list-card.component.html
@@ -1,6 +1,7 @@
 <p-card [style]="{'width': '400px', 'margin': '4px'}" pDroppable (onDrop)="onDrop()">
-  <div class="p-card-header">
-    <input type="text" pInputText placeholder="Enter title" class="card-title" [(ngModel)]="model.title" (ngModelChange)="table.saveToCookie()">
+  <div class="p-card-header" style="display: flex; margin-bottom: 4px">
+      <input type="text" pInputText placeholder="Enter title" class="card-title" style="flex-grow: 1;" [(ngModel)]="model.title" (ngModelChange)="table.saveToCookie()">
+      <button pButton pRipple class="p-button-danger" icon="pi pi-trash" style="flex-shrink: 0;"  (mouseup)="delete()"></button>
   </div>
   <div class="m-0">
     <app-individual-card *ngFor="let card of model.cards" [model]="card"></app-individual-card>
