color picker quick colors and multiselect for set color

--- a/src/app/individual-card/individual-card.component.html
+++ b/src/app/individual-card/individual-card.component.html
@@ -1,15 +1,32 @@
-<p-card [style]="{'margin': '4px', 'background-color': model.color ?? '#ede9e8'}" pDraggable pDroppable (onDrag)="onDrag()" (onDrop)="onDrop($event)" (contextmenu)="contextMenu.show($event)">
+<p-card [style]="{'margin': '4px', 'background-color': model.color ?? '#ede9e8', 'outline': isMultiSelected() ? '3px solid rgba(0, 0, 127, 0.5)' : 'none'}" pDraggable pDroppable
+        (onDrag)="onDrag()" (onDrop)="onDrop($event)" (contextmenu)="contextMenu.show($event)"
+        (mouseup)="cardClick($event);">
   <div class="m-0" style="display: flex; flex-direction: column;">
     <textarea pInputTextarea placeholder="Enter description for card" class="card-desc" [autoResize]="true"
               style="background: transparent none;"
               [style]="{'background': 'transparent none', 'color': contrastingColor(model.color ?? '#ffffff')}"
               [(ngModel)]="model.description" (ngModelChange)="table.saveToCookie()"></textarea>
-    <button pButton pRipple icon="pi pi-ellipsis-h" [style]="{'color': contrastingColor(model.color ?? '#ffffff')}" style="align-self: flex-end; border: none; background: transparent;" (click)="contextMenu.show($event)"></button>
+    <button pButton pRipple icon="pi pi-ellipsis-h" [style]="{'color': contrastingColor(model.color ?? '#ffffff')}"
+            style="align-self: flex-end; border: none; background: transparent;"
+            (click)="contextMenu.show($event);" (mouseup)="$event.stopPropagation();"></button>
   </div>
 </p-card>
 
 <p-contextMenu #contextMenu [model]="contextItems"></p-contextMenu>
-<p-dialog header="Color Picker for {{model.description}}" [(visible)]="displayColorPicker">
-  <p-colorPicker inline="true" [(ngModel)]="model.color" (ngModelChange)="listCard.table.saveToCookie()"></p-colorPicker>
-  <p>{{model.color}}</p>
+<p-dialog resizable="false" header="Color Picker for {{model.description}} {{sharedService.multiSelected.length > 0 ? ' and ' + sharedService.multiSelected.length + ' cards' : ''}}" [(visible)]="displayColorPicker">
+  <div style="display: flex; flex-direction: row">
+    <div>
+      <p-colorPicker inline="true" [(ngModel)]="model.color"
+                     (ngModelChange)="colorChange()"></p-colorPicker>
+      <p>{{ model.color }}</p>
+    </div>
+    <div style="margin-left: 8px; width: 200px;">
+      Quick colors
+      <p-virtualScroller [value]="displayColorPicker ? table.getColors() : []" [itemSize]="50" scrollHeight="300px">
+        <ng-template pTemplate="item" let-col>
+          <button pButton pRipple [style]="{'background-color': col, 'color': contrastingColor(model.color ?? '#ffffff')}" (click)="colorChange(col)">{{col}}</button>
+        </ng-template>
+      </p-virtualScroller>
+    </div>
+  </div>
 </p-dialog>
