--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
-<div style="display: flex;">
+<p-menubar [model]="menuBar" [style]="{'position': 'fixed', 'width': '100%'}"></p-menubar>
+
+<div style="display: flex; padding-top: 60px">
   <app-list-card title="test" *ngFor="let item of cardList;" [model]="item"></app-list-card>
-  <button pButton pRipple class="p-button-success" icon="pi pi-plus" style="flex-shrink: 0" (mouseup)="newList()"></button>
+  <button pButton pRipple class="p-button-success" icon="pi pi-plus" style="flex-shrink: 0"
+          (mouseup)="newList()"></button>
   <div style="width: 100px; flex-shrink: 0;"></div>
 </div>
